name:                TopSort
version:             0.1.0.0
homepage:            https://github.com/wespl/haskell-testing-lecture
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TopSort
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TopSort
                     , hspec
                     , QuickCheck
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/wespl/haskell-testing-lecture
